--- a/_config.yml
+++ b/_config.yml
@@ -1,49 +1,4 @@
 # Informazioni sul sito
 title: "Nessi"
-description: "Un manuale di Scienze Umane ad accesso aperto."
-baseurl: "" # Lascia vuoto per il dominio principale, altrimenti aggiungi qualcosa come "/blog"
-url: "https://nessi.netlify.app # L'URL completo del sito
-
-# Autore
-author:
-  name: "Antonio Vigilante"
-  email: "antoniovigilante@autistici.org"
-
 baseurl: ""
-
-
-# Output
-destination: _site # Directory di output per il sito generato
-
-# Plugin (opzionale, aggiungi quelli installati nel Gemfile)
-plugins:
-  - jekyll-seo-tag
-  - jekyll-paginate
-
-# Configurazione Markdown
-markdown: kramdown
-kramdown:
-  input: GFM # Utilizza il Markdown GitHub-style
-
-# File e cartelle da escludere dalla build
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-
-# Impostazioni del server locale
-port: 4000 # Porta per il server di sviluppo
-
-# Paginazione (se usi il plugin jekyll-paginate)
-paginate: 5 # Numero di post per pagina
-paginate_path: "/page:num/"
-
-# Tema (opzionale)
-theme: minima # Specifica il tema predefinito, se usi un tema di Jekyll
-
-# Lingua
-lang: it # Imposta la lingua del sito
-
-# Formato del tempo
-time_zone: Europe/Rome # Fuso orario
-
+url: "https://nessi.netlify.app"
